welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:10: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
	getCouleurBrosse(Color.red)
                        ^PatternPicture:13: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
	getCouleurBrosse(Color.blue)
                        ^PatternPicture:20: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
	getCouleurBrosse(Color.green)
                        ^PatternPicture:27: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
	getCouleurBrosse(Color.yellow)
                        ^PatternPicture:34: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
	getCouleurBrosse(Color.red)
                        ^